argocd/minecraft/manifests/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mc
  annotations:
    lbipam.cilium.io/ips: 10.10.8.7
  labels:
    service: mc
spec:
  ports:
    - name: tcp
      port: 25565
      protocol: TCP
      targetPort: 25565
  selector:
    server: mc
  type: LoadBalancer
