argocd/minecraft/manifests/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mc-httproute
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  rules:
    - backendRefs:
        - name: mc
          namespace: minecraft
          port: 25565
